Git usage example

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello Neon</title>
+    <title>Hello 3333 Neon</title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="grid.css" type="text/css"> 
